[package]
authors = ["Max Willsey <me@mwillsey.com>"]
categories = ["data-structures"]
description = "An implementation of egraphs"
edition = "2021"
keywords = ["e-graphs"]
license = "MIT"
name = "plat-egg"
readme = "README.md"
repository = "https://github.com/egraphs-good/egg"
version = "0.9.5"
rust-version = "1.63.0"

[dependencies]
default-vec2 = "0.1.3"
rustc-hash = {version = "1.1.0", default-features = false}
hashbrown = { version = "0.14.3", default-features = false, features = ["inline-more"] }
indexmap = { version = "1.8.1", optional = true }
instant = { version = "0.1.12" , optional = true}
log = { version = "0.4.17", default-features = false }
smallvec = { version = "1.8.0", features = ["union", "const_generics"] }
symbol_table = { version = "0.3.0", features = ["global"], optional = true }
symbolic_expressions = { version = "5.0.3", optional = true }
thiserror = { version = "1.0.31" , optional = true }
no-std-compat = {version = "0.4.1", features = ["alloc"]}

# for the lp feature
coin_cbc = { version = "0.1.6", optional = true }

# for the serde-1 feature
serde = { version = "1.0.137", features = ["derive"], optional = true }
vectorize = { version = "0.2.0", optional = true }

# for the reports feature
serde_json = { version = "1.0.81", optional = true }
saturating = "0.1.0"

[dev-dependencies]
ordered-float = "3.0.0"
env_logger = { version = "0.9.0", default-features = false }

[features]
# forces the use of indexmaps over hashmaps
deterministic = ["indexmap"]
default = ["egg_compat"]
# TODO expand no-std
egg_compat = ["indexmap", "instant", "symbol_table", "symbolic_expressions", "thiserror", "std"]
std = ["no-std-compat/std"]
lp = ["coin_cbc"]
reports = ["serde-1", "serde_json"]
serde-1 = [
  "serde",
  "indexmap/serde-1",
  "hashbrown/serde",
  "symbol_table/serde",
  "default-vec2/serde-1",
  "vectorize",
]
wasm-bindgen = ["instant/wasm-bindgen"]
push-pop-alt = []

# private features for testing
test-explanations = []
test-push-pop = ["deterministic"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
